# fido-authenticator

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cd-test.yml  cd.yml  ci.yml
examples/: usbip.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ctap.rs
src/: constants.rs  credential.rs  credential_management.rs  ctap1.rs  ctap2.rs  dispatch.rs  lib.rs  state.rs
src/ctap2/: credential_management.rs  large_blobs.rs  pin.rs
src/dispatch/: apdu.rs  ctaphid.rs
src/state/: migrate.rs
tests/: basic.rs  cred_blob.rs  cred_mgmt.rs  ctap1.rs
tests/authenticator/: mod.rs
tests/fs/: mod.rs
tests/virt/: dispatch.rs  mod.rs  pipe.rs
tests/webauthn/: mod.rs
