[package]
name = "fido-authenticator-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
ctap-types = { version = "0.5", features = ["arbitrary"] }
libfuzzer-sys = "0.4"
trussed = { version = "0.1", features = ["certificate-client", "crypto-client", "filesystem-client", "management-client", "aes256-cbc", "ed255", "p256", "sha256"] }
trussed-staging = { version = "0.4.0", features = ["chunked", "hkdf", "virt", "fs-info"] }

[dependencies.fido-authenticator]
path = ".."

[[bin]]
name = "ctap"
path = "fuzz_targets/ctap.rs"
test = false
doc = false
bench = false

[patch.crates-io]
# Track the ctap2.3 branches on the 0x0ece forks of ctap-types + trussed
# until the corresponding PRs (trussed-dev/ctap-types#75,
# trussed-dev/trussed#219) merge upstream.
ctap-types      = { git = "https://github.com/0x0ece/ctap-types", rev = "88a5591d9205e54f8e5fae0f3978fc6e20845e79" }
trussed         = { git = "https://github.com/0x0ece/trussed",    rev = "b69aa1fdf817cc6f679fd695724615f5f91a0812" }
trussed-core    = { git = "https://github.com/0x0ece/trussed",    rev = "b69aa1fdf817cc6f679fd695724615f5f91a0812" }
trussed-staging = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "v0.4.0" }
